fable/test/syntax_error/not_an_identifier.f
      program prog
      external a, x%z
      end
